k8s/applications/web/vaultwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
