k8s/applications/web/vaultwarden/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: envoy-internal
      namespace: network
  hostnames:
    - bitwarden.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
